; ModuleID = '/home/carl/AnghaBench/TDengine/src/rpc/src/extr_tmsghdr.c_taosSendMsgHdr.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/rpc/src/extr_tmsghdr.c_taosSendMsgHdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msghdr = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @taosSendMsgHdr(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.msghdr*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.msghdr*
  store %struct.msghdr* %7, %struct.msghdr** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.msghdr*, %struct.msghdr** %5, align 8
  %10 = call i32 @sendmsg(i32 %8, %struct.msghdr* %9, i32 0)
  %11 = load %struct.msghdr*, %struct.msghdr** %5, align 8
  %12 = getelementptr inbounds %struct.msghdr, %struct.msghdr* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}

declare dso_local i32 @sendmsg(i32, %struct.msghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
